added dynamic url

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo center">Vignesh Py</a>
+      <!-- <a href="#!" class="brand-logo center">Vignesh Py</a> -->
       <ul class="left hide-on-med-and-down">
-        <li><a href="">Home</a></li>
+        <li><a href="{% url "index" %}">Home</a></li>
         {%for cat in list %}
-        <li><a href="">{{cat.category}}</a></li>
+        <li><a href="{% url "category" cat.category %}">{{cat.category}}</a></li>
         {% endfor %}
       
         <li class="active"><a href="">Latest Feeds</a></li>
       </ul>
-      <div class="progress">
-        <div class="indeterminate"></div>
-    </div>
+
           
     </div>
     
@@ -31,3 +29,5 @@
   })
   
   </script>
+  {% block content %}
+  {% endblock %}
