--- a/templates/base.html
+++ b/templates/base.html
@@ -60,12 +60,20 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="{%url 'index' %}" class="nav-link active ">Home</a>
               </li>
-              <li class="nav-item"><a href="{%url 'blog' %}" class="nav-link ">Blog</a>
+              <li class="nav-item"><a href="{%url 'index' %}" class="nav-link ">Blog</a>
               </li>
-              <li class="nav-item"><a href="{%url 'post' %}" class="nav-link ">Post</a>
-              
-              <li class="nav-item"><a href="" class="nav-link ">Categories</a>
-              </li>
+              <li class="nav-item"><a href="{%url 'index' %}" class="nav-link ">Post</a>
+             
+                    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+       
+ <a class="dropdown-item" href="#">{{i.category}}</a>
+        </div>
+      </li>
               <li class="nav-item"><a href="#" class="nav-link ">Contact</a>
               </li>
             </ul>
